auto-load in popup

--- a/octoprint_palette2/static/less/partials/advancedOptions.less
+++ b/octoprint_palette2/static/less/partials/advancedOptions.less
@@ -162,24 +162,6 @@
   }
 }
 
-.small-loader-autoload {
-  display: inline-flex;
-  overflow: hidden;
-  margin-top: 2px;
-  margin-left: 5px;
-  width: 11px;
-  height: 11px;
-  border: 2px solid fade(@color-1, 40%);
-  border-top-color: @color-1;
-  border-radius: 50%;
-  animation: rotate360 1.5s linear infinite;
-}
-
-@keyframes rotate360 {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.tim-brookman {
+  font-style: italic;
 }
