--- a/octoprint_palette2/static/less/partials/main.less
+++ b/octoprint_palette2/static/less/partials/main.less
@@ -167,6 +167,47 @@ input[type="text"] {
   }
 }
 
+.side-notifications-list {
+  position: fixed;
+  top: 15%;
+  left: 0;
+  margin: 0;
+}
+
+.loading-overlay-container {
+  z-index: 999;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  background-color: fade(@color-4, 50%);
+}
+
+.loader {
+  width: 4em;
+  height: 4em;
+  border: 8px solid fade(@color-2, 40%);
+  border-top-color: @color-2;
+  border-radius: 50%;
+  animation: rotate360 1.5s linear infinite;
+}
+
+@keyframes rotate360 {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 .loading-overlay-message {
   color: @color-2;
   font-size: 16px;
