--- a/octoprint_palette2/templates/palette2_tab.jinja2
+++ b/octoprint_palette2/templates/palette2_tab.jinja2
@@ -81,6 +81,21 @@
 			<div class="row advanced_options" data-bind="visible: connected() && advancedOptions()">
 				<h4>Advanced Options</h4>
 				<ul class="list-advanced-options">
+						<li class="single-advanced-option ping-auto-cancel">
+							<div class="input-container">
+								<label for="ping-auto-cancel-input"><span>Cancel Print if Missed Ping:</span></label>
+								<div class="interaction-container">
+									<input class="single-advanced-option-input" id="ping-auto-cancel-input" type="checkbox" data-bind="checked: autoCancelPing">
+									<div class="advanced-info-container">
+										<i class="material-icons advanced-info-icon" data-bind="click: toggleAdvancedOptionInfo">info_outline</i>
+										<div class="advanced-info-text" id="ping-auto-cancel-text">
+											<h6 class="advanced-info-heading">Auto cancel the print when a ping is missed</h6>
+											<div class="advanced-info-body"><p>When using your palette in connected mode, a missed ping may be a good indication of jammed or broken filament. When this option is enabled the print will automatically cancel when a ping is missed.</p></div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</li>
 						<li class="single-advanced-option ping-printer-display">
 							<div class="input-container">
 								<label for="ping-printer-display-input"><span>Enable Ping Display on Printer:</span></label>
