--- a/octoprint_palette2/templates/palette2_tab.jinja2
+++ b/octoprint_palette2/templates/palette2_tab.jinja2
@@ -83,7 +83,7 @@
 				<ul class="list-advanced-options">
 						<li class="single-advanced-option ping-auto-cancel">
 							<div class="input-container">
-								<label for="ping-auto-cancel-input"><span>Cancel Print On Missed Ping:</span></label>
+								<label for="ping-auto-cancel-input"><span>Enable Cancel Print On Missed Ping:</span></label>
 								<div class="interaction-container">
 									<input class="single-advanced-option-input" id="ping-auto-cancel-input" type="checkbox" data-bind="checked: autoCancelPing">
 									<div class="advanced-info-container">
