--- a/octoprint_palette2/static/less/partials/main.less
+++ b/octoprint_palette2/static/less/partials/main.less
@@ -251,7 +251,7 @@ input[type="text"] {
   color: red;
 }
 
-.jog-filament-value {
+.load-filament-value {
   margin: 0;
   font-size: 12px;
   font-style: italic;
