center smart-load loader with filament value remaining

--- a/octoprint_palette2/static/less/partials/main.less
+++ b/octoprint_palette2/static/less/partials/main.less
@@ -251,6 +251,11 @@ input[type="text"] {
   color: red;
 }
 
+.value-container {
+  display: flex;
+  justify-content: flex-end;
+}
+
 .load-filament-value {
   margin: 0;
   font-size: 12px;
