only have one input for ping variation range

--- a/octoprint_palette2/templates/palette2_tab.jinja2
+++ b/octoprint_palette2/templates/palette2_tab.jinja2
@@ -98,20 +98,11 @@
 								<div class="variation-inputs-options additional-options" data-bind="visible: autoVariationCancelPing">
 								<div class="variation-inputs">
 									<div class="input-container">
-											<label for="upper-variation-input"><span>Max Upper Variation:</span></label>
+											<label for="variation-input"><span>Acceptable Variation Range (+/-):</span></label>
 											<div class="input-append">
-												<input id="upper-variation-input" class="input-mini" type="number" min="1" max="100" data-bind="value: upperVariationPct, enable: autoVariationCancelPing">
+												<input id="variation-input" class="input-mini" type="number" min="1" max="100" data-bind="value: variationPct, enable: autoVariationCancelPing">
 												<span class="add-on">%</span>
 											</div>
-									</div>
-									<div class="input-container">
-										<label for="lower-variation-input"><span>Max Lower Variation:</span></label>
-										<label>
-												<div class="input-append">
-													<input id="lower-variation-input" class="input-mini" type="number" min="1" max="100" data-bind="value: lowerVariationPct, enable: autoVariationCancelPing">
-													<span class="add-on">%</span>
-												</div>
-										</label>
 									</div>
 								</div>
 							</div>
