--- a/octoprint_palette2/static/less/partials/advancedOptions.less
+++ b/octoprint_palette2/static/less/partials/advancedOptions.less
@@ -8,9 +8,102 @@
     margin-left: 0;
     margin-top: 15px;
 
+    // general styling for each advanced option
     .single-advanced-option {
       margin-top: 5px;
       margin-bottom: 15px;
+
+      .input-container {
+        display: flex;
+        align-items: center;
+        width: 60%;
+        justify-content: space-between;
+
+        .advanced-option-title {
+          font-weight: 700;
+        }
+
+        label {
+          margin-bottom: 0;
+        }
+
+        .interaction-container {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
+          input[type="checkbox"].single-advanced-option-input {
+            margin: 0;
+            width: 16px;
+            height: 16px;
+          }
+
+          .advanced-info-container {
+            margin-left: 10px;
+            position: relative;
+            display: flex;
+
+            .advanced-info-icon {
+              margin-right: 0;
+              font-size: 20px;
+              cursor: pointer;
+            }
+            .advanced-info-text {
+              display: none;
+              flex-direction: column;
+              position: absolute;
+              width: 250px;
+              left: 35px;
+              top: -30px;
+              background-color: @color-1;
+              border: 1px solid @color-6;
+              border-radius: 3px;
+              padding: 10px;
+
+              &::after,
+              &::before {
+                content: "";
+                position: absolute;
+                display: block;
+                right: 100%;
+                width: 0;
+                height: 0;
+                border-style: solid;
+              }
+
+              // fill
+              &::after {
+                top: 29px;
+                border-color: transparent @color-1 transparent transparent;
+                border-width: 10px;
+              }
+
+              // border
+              &::before {
+                top: 28px;
+                border-color: transparent @color-6 transparent transparent;
+                border-width: 11px;
+              }
+
+              .advanced-info-heading {
+                margin: 0 0 3px 0;
+                font-size: 15px;
+              }
+
+              .advanced-info-body {
+                font-size: 13px;
+                p {
+                  margin: 0;
+                }
+              }
+
+              .contributors {
+                font-style: italic;
+              }
+            }
+          }
+        }
+      }
 
       .additional-options {
         margin-top: 10px;
@@ -36,94 +129,7 @@
       }
     }
 
-    .input-container {
-      display: flex;
-      align-items: center;
-      width: 60%;
-      justify-content: space-between;
-
-      .advanced-option-title {
-        font-weight: 700;
-      }
-
-      label {
-        margin-bottom: 0;
-      }
-
-      .interaction-container {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
-        input[type="checkbox"].single-advanced-option-input {
-          margin: 0;
-          width: 16px;
-          height: 16px;
-        }
-
-        .advanced-info-container {
-          margin-left: 10px;
-          position: relative;
-          display: flex;
-
-          .advanced-info-icon {
-            margin-right: 0;
-            font-size: 20px;
-            cursor: pointer;
-          }
-          .advanced-info-text {
-            display: none;
-            flex-direction: column;
-            position: absolute;
-            width: 250px;
-            left: 35px;
-            top: -30px;
-            background-color: @color-1;
-            border: 1px solid @color-6;
-            border-radius: 3px;
-            padding: 10px;
-
-            &::after,
-            &::before {
-              content: "";
-              position: absolute;
-              display: block;
-              right: 100%;
-              width: 0;
-              height: 0;
-              border-style: solid;
-            }
-
-            // fill
-            &::after {
-              top: 29px;
-              border-color: transparent @color-1 transparent transparent;
-              border-width: 10px;
-            }
-
-            // border
-            &::before {
-              top: 28px;
-              border-color: transparent @color-6 transparent transparent;
-              border-width: 11px;
-            }
-
-            .advanced-info-heading {
-              margin: 0 0 3px 0;
-              font-size: 15px;
-            }
-
-            .advanced-info-body {
-              font-size: 13px;
-              p {
-                margin: 0;
-              }
-            }
-          }
-        }
-      }
-    }
-
+    // specific styling for feed rate control
     .feed-rate-control-options {
       .feed-rate-speeds {
         display: flex;
@@ -147,15 +153,11 @@
       }
     }
 
+    // specific styling for ping variation cancel
     .ping-variation-cancel {
-
       .variation-input-status {
         margin-top: 10px;
       }
     }
   }
-}
-
-.contributors {
-  font-style: italic;
 }
