properly display upper and lower variation bounds text

--- a/octoprint_palette2/static/less/partials/advancedOptions.less
+++ b/octoprint_palette2/static/less/partials/advancedOptions.less
@@ -157,6 +157,7 @@
     .ping-variation-cancel {
       .variation-input-status {
         margin-top: 10px;
+        font-style: italic;
       }
     }
   }
