--- a/octoprint_palette2/templates/palette2_tab.jinja2
+++ b/octoprint_palette2/templates/palette2_tab.jinja2
@@ -105,7 +105,7 @@
 										<i class="material-icons advanced-info-icon" data-bind="click: toggleAdvancedOptionInfo">info_outline</i>
 										<div class="advanced-info-text" id="ping-variation-cancel-text">
 											<h6 class="advanced-info-heading">Automatically CANCEL print when ping variation is too large</h6>
-											<div class="advanced-info-body"><p>By enabling this option, your Hub will cancel the print when it detects a ping that has varied beyond your accepted range from the most recent ping. A large variation may be an indication of jammed/broken filament or of something wrong with your printer.<br><br><span class="contributors">Special thank you to <a target="_blank" href="https://gitlab.com/clifford.roche">Clifford Roche</a>.</span></p></div>
+											<div class="advanced-info-body"><p>By enabling this option, your Hub will cancel the current print when it detects a ping that has varied beyond your accepted range from the most recent ping. A large variation may be an indication of jammed/broken filament or of something wrong with your printer.<br><br><span class="contributors">Special thank you to <a target="_blank" href="https://gitlab.com/clifford.roche">Clifford Roche</a>.</span></p></div>
 										</div>
 									</div>
 								</div>
